# Udemy_Cmake

CMake/Basic_Project/: CMakeLists.txt  main.cc
CMake/ConfigureFile/: CMakeLists.txt
CMake/ConfigureFile/app/: main.cc
CMake/ConfigureFile/configured/: config.hpp.in
CMake/Doxygen/: CMakeLists.txt  Makefile
CMake/Doxygen/docs/: Doxyfile
CMake/Doxygen/exe/: main.cc
CMake/Doxygen/src/header/: my_lib.h
CMake/External_Conan/: CMakeLists.txt  Makefile
CMake/External_Conan/cmake/: AddGitSubmodule.cmake
CMake/External_Conan/exe/: main.cc
CMake/External_Library_Git/: CMakeLists.txt
CMake/FetchContent/: CMakeLists.txt  Makefile
CMake/FetchContent/exe/: main.cc
CMake/FetchContent/src/core/: my_lib.cc
CMake/Final/: CMakeLists.txt  Makefile
CMake/Final/app/: CMakeLists.txt  main.cc
CMake/Final/tests/: main.cc
CMake/Intermediater_Project/: CMakeLists.txt
CMake/Intermediater_Project/src/: my_lib.cc
CMake/Variables_Options/: CMakeLists.txt
CMake/helloworld/: CMakeLists.txt  main.cc
CMake/sourcesandheader/: CMakeLists.txt
